Add button to dashboard to redirect to all tickets

--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -14,5 +14,8 @@
   </head>
   <body>
     <h1>Welcome</h1>
+    <a class="btn btn-primary" href="/allTickets" role="button"
+      >View All Tickets</a
+    >
   </body>
 </html>
