added color and styling to table on allTickets page

--- a/views/allTickets.html
+++ b/views/allTickets.html
@@ -18,31 +18,26 @@
       <thead>
         <tr>
           <th scope="col">#</th>
-          <th scope="col">First</th>
-          <th scope="col">Last</th>
-          <th scope="col">Handle</th>
+          <th scope="col">Issue Description</th>
+          <th scope="col">Time Posted</th>
         </tr>
       </thead>
       <tbody>
         <tr>
           <th scope="row">1</th>
-          <td class="bg-success">Mark</td>
+          <td class="bg-success">Chair Broke</td>
 
-          <td class="bg-success">Otto</td>
-
-          <td class="bg-success">@mdo</td>
+          <td class="bg-success">3:30pm</td>
         </tr>
         <tr>
           <th scope="row">2</th>
-          <td>Jacob</td>
-          <td>Thornton</td>
-          <td>@fat</td>
+          <td class="bg-warning">Elevator broke</td>
+          <td class="bg-warning">8:52pm</td>
         </tr>
         <tr>
           <th scope="row">3</th>
-          <td>Larry</td>
-          <td>the Bird</td>
-          <td>@twitter</td>
+          <td class="bg-danger">Light Broke</td>
+          <td class="bg-danger">4:30pm</td>
         </tr>
       </tbody>
     </table>
