adds data from all tickets table to allTickets page

--- a/views/allTickets.html
+++ b/views/allTickets.html
@@ -24,20 +24,20 @@
       </thead>
       <tbody>
         <tr>
-          <th scope="row">1</th>
-          <td class="bg-success">Chair Broke</td>
+          <th scope="row" class="bg-success">${tickets[0].id}</th>
+          <td class="bg-success">${tickets[0].issue_desc}</td>
 
-          <td class="bg-success">3:30pm</td>
+          <td class="bg-success">${tickets[0].time_posted}</td>
         </tr>
         <tr>
-          <th scope="row">2</th>
-          <td class="bg-warning">Elevator broke</td>
-          <td class="bg-warning">8:52pm</td>
+          <th scope="row" class="bg-warning">${tickets[1].id}</th>
+          <td class="bg-warning">${tickets[1].issue_desc}</td>
+          <td class="bg-warning">${tickets[1].time_posted}</td>
         </tr>
         <tr>
-          <th scope="row">3</th>
-          <td class="bg-danger">Light Broke</td>
-          <td class="bg-danger">4:30pm</td>
+          <th scope="row" class="bg-danger">${tickets[2].id}</th>
+          <td class="bg-danger">${tickets[2].issue_desc}</td>
+          <td class="bg-danger">${tickets[2].time_posted}</td>
         </tr>
       </tbody>
     </table>
