created views open,complete, and pending ticket html files

--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -17,5 +17,13 @@
     <a class="btn btn-primary" href="/allTickets" role="button"
       >View All Tickets</a
     >
+    <a class="btn btn-primary" href="/openTickets" role="button"
+      >View Open Tickets</a
+    ><a class="btn btn-primary" href="/pendingTickets" role="button"
+      >View Pending Tickets</a
+    >
+    <a class="btn btn-primary" href="/completedTickets" role="button"
+      >View Completed Tickets</a
+    >
   </body>
 </html>
