--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -5,17 +5,132 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Dashboard</title>
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"/>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </head>
   <body>
     <h1>Welcome</h1>
+
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="/login">Login</a></li>
+          <li class="breadcrumb-item aria-current="page><a href="/dashboard">Dashboard</a></li>
+
+        </ol>
+      </nav>
     <a class="btn btn-primary" href="/allTickets" role="button"
       >View All Tickets</a
     >
+
+    <h1>Open Tickets</h1>
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">Id</th>
+          <th scope="col">Issue Description</th>
+          <th scope="col">Time Posted</th>
+          <th scope="col">Status</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">test</th>
+          <td>test</td>
+          <td>test</td>
+          <td>
+              <div class="dropdown">
+                  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Status
+                  </button>
+                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" href="#">Pending</a>
+                    <a class="dropdown-item" href="#">Completed</a>
+                  </div>
+                </div>
+          </td>
+        </tr>
+      
+      </tbody>
+    </table>
+
+    <h1>Pending</h1>
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">Id</th>
+          <th scope="col">Issue Description</th>
+          <th scope="col">Time Posted</th>
+          <th scope="col">Status</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">test</th>
+          <td>test</td>
+          <td>test</td>
+          <td>
+              <div class="dropdown">
+                  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Status
+                  </button>
+                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" href="#">Completed</a>
+                  </div>
+                </div>
+          </td>
+        </tr>
+      
+      </tbody>
+    </table>
+
+    <h1>Completed</h1>
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">Id</th>
+          <th scope="col">Issue Description</th>
+          <th scope="col">Time Posted</th>
+          <th scope="col">Name</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">test</th>
+          <td>test</td>
+          <td>test</td>
+          
+        </tr>
+      
+      </tbody>
+    </table>
+
+
+<h1>Submit Request Below</h1>
+
+
+    <form 
+      action="/dashboard" 
+      method="POST"
+      >
+            <div class="form-group">
+              <label for="exampleFormControlInput1">Issue</label>
+              <input type="text" name="itemName" class="form-control" id="exampleFormControlInput1" placeholder="Issue">
+            </div>
+            <div class="form-group">
+                <label for="exampleFormControlInput1">Floor</label>
+                <input type="text" name="category" class="form-control" id="exampleFormControlInput1" placeholder="Category">
+              </div>
+            <div class="form-group">
+              <label for="exampleFormControlTextarea1">Comments</label>
+              <textarea class="form-control" name="content" id="exampleFormControlTextarea1" rows="3"></textarea>
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+          </form>
+
+  </body>
+</html>
+
   </body>
 </html>
