adds styling to the homepage html file

--- a/views/homepage.html
+++ b/views/homepage.html
@@ -4,9 +4,73 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="/styling/homepage.css">
     <title>Do The Thing!</title>
 </head>
 <body>
+    <style>
+    body {
+        background-color: #2D2D2D;
+    }
+    .content {
+        font-family: 'Avenir';
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 50px;
+    }
+    h1 {
+        color: white;
+        font-size: 80px;
+        letter-spacing: -4px;
+    }
+    .thing-text {
+        font-style: oblique;
+        color: orange;
+    }
+    h4 {
+        font-family: 'Avenir';
+        text-transform: uppercase;
+        letter-spacing: 10px;
+        color: #FCCDA2;
+        font-size: 20px;
+    }
+    h2 {
+        color: white;
+        /* border: 2px solid orange; */
+        padding: 30px 50px;
+        margin: 30px;
+    }
+    img {
+        width: 396px;
+        height: 125px;
+    }
+    a:link, a:visited {
+        background-color:orange;
+        color: white;
+        padding: 14px 25px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+    }
+    a:hover, a:active {
+        background-color: rgb(225, 141, 15);
+    }
+   
+        </style>
+
+    <div class="content">
+
+        <img src="/Users/rebeccauranga/Documents/DigitalCrafts/backend/backend-group-project/DoTheThing/ticket-icon.gif">
+
+        <h1>
+            Do The <span class="thing-text">Thing!</span>
+        </h1>
     
+        <h4>ticketing application</h4>
+
+        <h2><a href="/loginpage">LOGIN</a></h2>
+
+    </div>
 </body>
 </html>
