fixes openTickets connection bug

--- a/views/openTickets.html
+++ b/views/openTickets.html
@@ -13,6 +13,16 @@
     />
   </head>
   <body>
+
+      <nav aria-label="breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="/login">Login</a></li>
+            <li class="breadcrumb-item aria-current="page><a href="/dashboard">Dashboard</a></li>
+  
+          </ol>
+        </nav>
+
+        
     <h1>${message}</h1>
     <table class="table">
       <thead>
@@ -24,15 +34,19 @@
       </thead>
       <tbody>
         <tr>
-          <td class="bg-success">${tickets[0].all_tickets_id}</td>
+          <td>test</td>
+          <td>test</td>
+          <td>test</td>
         </tr>
         <tr>
-          <th scope="row" class="bg-warning">${tickets[1].id}</th>
-          <td class="bg-warning">${tickets[1].all_tickets_id}</td>
+          <th scope="row">test</th>
+          <td>test</td>
+          <td>test</td>
         </tr>
         <tr>
-          <th scope="row" class="bg-danger">${tickets[2].id}</th>
-          <td class="bg-danger">${tickets[2].all_tickets_id}</td>
+          <th scope="row">test</th>
+          <td>test</td>
+          <td>test</td>
         </tr>
       </tbody>
     </table>
