adds functionaality so that the login button takes you to login page

--- a/views/homepage.html
+++ b/views/homepage.html
@@ -69,7 +69,7 @@
     
         <h4>ticketing application</h4>
 
-        <h2><a href="/loginpage">LOGIN</a></h2>
+        <h2><a href="/login">LOGIN</a></h2>
 
     </div>
 </body>
