styles login page

--- a/views/homepage.html
+++ b/views/homepage.html
@@ -41,10 +41,10 @@
         padding: 30px 50px;
         margin: 30px;
     }
-    img {
+    /* img {
         width: 396px;
         height: 125px;
-    }
+    } */
     a:link, a:visited {
         background-color:orange;
         color: white;
@@ -56,12 +56,19 @@
     a:hover, a:active {
         background-color: rgb(225, 141, 15);
     }
+
+    h3 {
+        border: 2px solid white;
+        font-size: 50px; 
+        color: white;
+        padding: 20px;
+    }
    
         </style>
 
     <div class="content">
 
-        <img src="/Users/rebeccauranga/Documents/DigitalCrafts/backend/backend-group-project/DoTheThing/ticket-icon.gif">
+        <!-- <img src="/15550803216451919.png"> -->
 
         <h1>
             Do The <span class="thing-text">Thing!</span>
@@ -70,6 +77,8 @@
         <h4>ticketing application</h4>
 
         <h2><a href="/login">LOGIN</a></h2>
+
+        <h2><a href="/request">SUBMIT REQUEST</a></h2>
 
     </div>
 </body>
