--- a/views/login.html
+++ b/views/login.html
@@ -7,12 +7,33 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Login Page</title>
 </head>
-<body>         
-     <div class="jumbotron">
-        <div class="container text-center">
+<body> 
+
+    <style>
+
+      body {
+        background-color: #2D2D2D;
+        margin: 100px;
+      }
+      
+      h1 {
+        font-family: 'Avenir';
+        color: white;
+      }
+
+      .form-group {
+        color: white;
+      }
+      
+      
+      
+      </style>
+
+    
+     
             <h1>${message}</h1>      
-        </div>  
-     </div>           
+        
+            
                   <form action="/login" method="POST">
                     <div class="form-group">
                     <label for="email">Email</label>
