styles login page

--- a/views/homepage.html
+++ b/views/homepage.html
@@ -23,6 +23,7 @@
         color: white;
         font-size: 80px;
         letter-spacing: -4px;
+        margin: 0;
     }
     .thing-text {
         font-style: oblique;
@@ -68,7 +69,7 @@
 
     <div class="content">
 
-        <!-- <img src="/15550803216451919.png"> -->
+        <img src="/Users/rebeccauranga/Documents/DigitalCrafts/backend/backend-group-project/DoTheThing/views/ticket-icon.png">
 
         <h1>
             Do The <span class="thing-text">Thing!</span>
