--- a/views/login.html
+++ b/views/login.html
@@ -18,13 +18,17 @@
       
       h1 {
         font-family: 'Avenir';
-        color: white;
+        color: orange;
       }
 
       .form-group {
         color: white;
       }
       
+      .btn {
+        color: white;
+        background-color: orange;
+      }
       
       
       </style>
@@ -46,7 +50,7 @@
                     </div>
                 
                     </div>
-                    <button type="submit" class="btn btn-primary">Log In</button>
+                    <button type="submit" class="btn">Log In</button>
                   </form>
     
 </body>
