adds request html page, route, and controller function for users to submit requests without logging in

--- a/views/homepage.html
+++ b/views/homepage.html
@@ -69,7 +69,7 @@
 
     <div class="content">
 
-        <img src="/Users/rebeccauranga/Documents/DigitalCrafts/backend/backend-group-project/DoTheThing/views/ticket-icon.png">
+        <!-- <img src="/backend-group-project/DoTheThing/views/ticket-icon.png"> -->
 
         <h1>
             Do The <span class="thing-text">Thing!</span>
