creates landing page for user after they submitted a request

--- a/views/request.html
+++ b/views/request.html
@@ -4,11 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"/>
+    <title>Submit a Request</title>
 </head>
 <body>
 
     <h1>Please enter the fields below:</h1>
+
+    <form 
+      action="/allTickets" 
+      method="POST"
+      >
+            <div class="form-group">
+              <label for="exampleFormControlInput1">Issue</label>
+              <input type="text" name="issue_desc" class="form-control" id="exampleFormControlInput1" placeholder="Issue">
+            </div>
+            <div class="form-group">
+                <!-- <label for="exampleFormControlInput1">Comments/Time</label>
+                <input type="text" name="time_posted" class="form-control" id="exampleFormControlInput1" placeholder="Category"> -->
+              </div>
+            <div class="form-group">
+              
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+          </form>
+
     
 </body>
 </html>
