--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -127,10 +127,10 @@
 
 <!-- WE WILL MOVE THIS REQUEST FORM TO ITS OWN PAGE -->
 
-<h1>Submit Request Below</h1>
+<!-- <h1>Submit Request Below</h1> -->
 
 
-    <form 
+    <!-- <form 
       action="/allTickets" 
       method="POST"
       >
@@ -139,14 +139,10 @@
               <input type="text" name="issue_desc" class="form-control" id="exampleFormControlInput1" placeholder="Issue">
             </div>
             <div class="form-group">
-                <!-- <label for="exampleFormControlInput1">Comments/Time</label>
-                <input type="text" name="time_posted" class="form-control" id="exampleFormControlInput1" placeholder="Category"> -->
-              </div>
-            <div class="form-group">
               
               <button type="submit" class="btn btn-primary">Submit</button>
             </div>
-          </form>
+          </form> -->
 
   </body>
 </html>
