sets up express app for serving static assets

--- a/views/homepage.html
+++ b/views/homepage.html
@@ -42,10 +42,12 @@
         padding: 30px 50px;
         margin: 30px;
     }
-    /* img {
+
+    img {
         width: 396px;
         height: 125px;
-    } */
+    }
+
     a:link, a:visited {
         background-color:orange;
         color: white;
@@ -69,7 +71,7 @@
 
     <div class="content">
 
-        <!-- <img src="/backend-group-project/DoTheThing/views/ticket-icon.png"> -->
+        <img src="/static/images/ticket-icon.png">
 
         <h1>
             Do The <span class="thing-text">Thing!</span>
