styles request page

--- a/views/request.html
+++ b/views/request.html
@@ -9,6 +9,31 @@
 </head>
 <body>
 
+        <style>
+
+                body {
+                  background-color: #2D2D2D;
+                  margin: 100px;
+                }
+                
+                h1 {
+                  font-family: 'Avenir';
+                  color: orange;
+                }
+          
+                .form-group {
+                  color: white;
+                }
+                
+                .btn {
+                  color: white;
+                  background-color: orange;
+                }
+                
+                
+                </style>
+          
+
     <h1>Please enter the fields below:</h1>
 
     <form 
@@ -17,7 +42,7 @@
       >
             <div class="form-group">
               <label for="exampleFormControlInput1">Issue</label>
-              <input type="text" name="issue_desc" class="form-control" id="exampleFormControlInput1" placeholder="Issue">
+              <input type="text" name="issue_desc" class="form-control" id="exampleFormControlInput1" placeholder="Please describe the issue here">
             </div>
             <div class="form-group">
                 <!-- <label for="exampleFormControlInput1">Comments/Time</label>
@@ -25,7 +50,7 @@
               </div>
             <div class="form-group">
               
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <button type="submit" class="btn">Submit</button>
             </div>
           </form>
 
