adds icon to login and submit request page

--- a/views/request.html
+++ b/views/request.html
@@ -29,8 +29,23 @@
                   color: white;
                   background-color: orange;
                 }
-                
-                
+
+                img {
+                    width: 150px; 
+                    height: 50px;
+                }
+
+                .footer {
+                    position: fixed;
+                    left: 0;
+                    bottom: 0;
+                    width: 100%;
+                    background-color: #2D2D2D;
+                    color: white;
+                    text-align:right;
+                    margin: 0px 150px 20px 0px;
+                }
+                   
                 </style>
           
 
@@ -53,6 +68,11 @@
               <button type="submit" class="btn">Submit</button>
             </div>
           </form>
+
+          <div class="footer">
+                <img src="/static/images/ticket-icon.png">
+                </div>
+
 
     
 </body>
