--- a/views/login.html
+++ b/views/login.html
@@ -29,6 +29,22 @@
         color: white;
         background-color: orange;
       }
+
+      img {
+          width: 150px; 
+          height: 50px;
+      }
+
+      .footer {
+          position: fixed;
+          left: 0;
+          bottom: 0;
+          width: 100%;
+          background-color: #2D2D2D;
+          color: white;
+          text-align:right;
+          margin: 0px 150px 20px 0px;
+      }
       
       
       </style>
@@ -52,6 +68,10 @@
                     </div>
                     <button type="submit" class="btn">Log In</button>
                   </form>
+
+                  <div class="footer">
+                      <img src="/static/images/ticket-icon.png">
+                      </div>
     
 </body>
 </html>
