--- a/views/homepage.html
+++ b/views/homepage.html
@@ -13,10 +13,11 @@
     }
     .content {
         font-family: 'Avenir';
+        /* font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; */
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin: 50px;
+        margin: 80px;
     }
     h1 {
         color: white;
@@ -48,6 +49,7 @@
     img {
         width: 396px;
         height: 125px;
+        margin-bottom: 30px;
     }
 
     a:link, a:visited {
