--- a/views/allTickets.html
+++ b/views/allTickets.html
@@ -41,7 +41,9 @@
           <td>${issue.issue_desc}</td>
           <td>${issue.time_posted}</td>
           <td>
-            <button type="button" class="btn btn-info">Get Details</button>
+            <form action="/details/:${issue.id}" method="GET">
+            <button type="submit" value="${issue.id}" class="btn btn-info">Get Details</button>
+            </form>
           </td>
         `
                   }).join('')
