--- a/views/openTickets.html
+++ b/views/openTickets.html
@@ -13,16 +13,15 @@
     />
   </head>
   <body>
-
-      <nav aria-label="breadcrumb">
-          <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="/login">Login</a></li>
-            <li class="breadcrumb-item"><a href="/dashboard">Dashboard</a></li>
-            <li class="breadcrumb-item aria-current="page><a href="/openTickets">Open Tickets</a></li>
-  
-          </ol>
-        </nav>
-
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="/login">Login</a></li>
+        <li class="breadcrumb-item"><a href="/dashboard">Dashboard</a></li>
+        <li class="breadcrumb-item aria-current=" page>
+          <a href="/openTickets">Open Tickets</a>
+        </li>
+      </ol>
+    </nav>
 
     <h1>${message}</h1>
     <table class="table">
@@ -34,18 +33,13 @@
         </tr>
       </thead>
       <tbody>
-          ${
-            join.map((ticket) => {
-              return `
+        ${ join.map((ticket) => { return `
         <tr>
           <td>${ticket.id}</td>
           <td>${ticket.issue_desc}</td>
           <td>${ticket.time_posted}</td>
-          `
-                    }).join('')
-                  }
+          ` }).join('') }
         </tr>
-    
       </tbody>
     </table>
   </body>
