--- a/views/pendingTickets.html
+++ b/views/pendingTickets.html
@@ -36,7 +36,7 @@
         ${ join.map((ticket) => { return `
         <tr>
           <td>${ticket.id}</td>
-          <td>${ticket.issue_desc}</td>
+          <td>${ticket.all_tickets_id}</td>
           <td>${ticket.time_posted}</td>
           ` }).join('') }
         </tr>
