made name changes to classes in pendingTickets.html file

--- a/views/openTickets.html
+++ b/views/openTickets.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Open Tickets</title>
+    <title>Pending Tickets</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -18,7 +18,7 @@
         <li class="breadcrumb-item"><a href="/login">Login</a></li>
         <li class="breadcrumb-item"><a href="/dashboard">Dashboard</a></li>
         <li class="breadcrumb-item aria-current=" page>
-          <a href="/openTickets">Open Tickets</a>
+          <a href="/pendingTickets">Pending Tickets</a>
         </li>
       </ol>
     </nav>
