--- a/views/pendingTickets.html
+++ b/views/pendingTickets.html
@@ -37,7 +37,8 @@
         <tr>
           <td>${ticket.id}</td>
           <td>${ticket.all_tickets_id}</td>
-          <td>${ticket.time_posted}</td>
+          <td>${ticket.users.id}</td>
+          <td>${ticket.time_started}</td>
           ` }).join('') }
         </tr>
       </tbody>
