--- a/views/completedTickets.html
+++ b/views/completedTickets.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Open Tickets</title>
+    <title>Completed Tickets</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -18,7 +18,7 @@
         <li class="breadcrumb-item"><a href="/login">Login</a></li>
         <li class="breadcrumb-item"><a href="/dashboard">Dashboard</a></li>
         <li class="breadcrumb-item aria-current=" page>
-          <a href="/openTickets">Open Tickets</a>
+          <a href="/completedTickets">Completed Tickets</a>
         </li>
       </ol>
     </nav>
@@ -36,8 +36,9 @@
         ${ join.map((ticket) => { return `
         <tr>
           <td>${ticket.id}</td>
-          <td>${ticket.issue_desc}</td>
-          <td>${ticket.time_posted}</td>
+          <td>${ticket.all_tickets_id}</td>
+          <td>${ticket.users_id}</td>
+          <td>${ticket.time_ended}</td>
           ` }).join('') }
         </tr>
       </tbody>
