--- a/views/homepage.html
+++ b/views/homepage.html
@@ -1,77 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Do The Thing!</title>
 </head>
+
 <body>
     <style>
-    body {
-        background-color: #2D2D2D;
-    }
-    .content {
-        font-family: 'Avenir';
-        /* font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; */
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin: 80px;
-    }
-    h1 {
-        color: white;
-        font-size: 80px;
-        letter-spacing: -4px;
-        margin: 0;
-    }
-    .thing-text {
-        font-style: oblique;
-        color: orange;
-        transition: letter-spacing 2s;
-    }
-    .thing-text:hover {
-        letter-spacing: 10px;
-    }
+        body {
+            background-color: #2D2D2D;
+        }
 
-    h4 {
-        font-family: 'Avenir';
-        text-transform: uppercase;
-        letter-spacing: 10px;
-        color: #FCCDA2;
-        font-size: 20px;
-    }
-    h2 {
-        color: white;
-        /* border: 2px solid orange; */
-    }
+        .content {
+            font-family: 'Avenir';
+            /* font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; */
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin: 80px;
+        }
 
-    img {
-        width: 396px;
-        height: 125px;
-        margin-bottom: 30px;
-    }
+        h1 {
+            color: white;
+            font-size: 80px;
+            letter-spacing: -4px;
+            margin: 0;
+        }
 
-    a:link, a:visited {
-        background-color:orange;
-        color: white;
-        padding: 14px 25px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-    }
-    a:hover, a:active {
-        background-color: rgb(225, 141, 15);
-    }
+        .thing-text {
+            font-style: oblique;
+            color: orange;
+            transition: letter-spacing 2s;
+        }
 
-    h3 {
-        border: 2px solid white;
-        font-size: 50px; 
-        color: white;
-        padding: 20px;
-    }
-   
-        </style>
+        .thing-text:hover {
+            letter-spacing: 10px;
+        }
+
+        h4 {
+            font-family: 'Avenir';
+            text-transform: uppercase;
+            letter-spacing: 10px;
+            color: #FCCDA2;
+            font-size: 20px;
+        }
+
+        h2 {
+            color: white;
+            /* border: 2px solid orange; */
+        }
+
+        img {
+            width: 396px;
+            height: 125px;
+            margin-bottom: 30px;
+        }
+
+        a:link,
+        a:visited {
+            background-color: orange;
+            color: white;
+            padding: 14px 25px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+        }
+
+        a:hover,
+        a:active {
+            background-color: rgb(225, 141, 15);
+        }
+
+        h3 {
+            border: 2px solid white;
+            font-size: 50px;
+            color: white;
+            padding: 20px;
+        }
+    </style>
 
     <div class="content">
 
@@ -80,7 +89,7 @@
         <h1>
             Do The <span class="thing-text">Thing!</span>
         </h1>
-    
+
         <h4>ticketing application</h4>
 
         <h2><a href="/login">LOGIN</a></h2>
@@ -88,5 +97,15 @@
         <h2><a href="/request">SUBMIT REQUEST</a></h2>
 
     </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
