--- a/views/createUser.html
+++ b/views/createUser.html
@@ -49,14 +49,14 @@
     </style>
             <h1>${message}</h1>      
             
-                <form action="/checkUser" method="POST">
+                <form action="/createUser" method="POST">
                     <div class="form-group">
                         <label for="firstName">First Name</label>
-                        <input value="${firstName}" name="firstName" type="text" class="form-control" id="firstName" aria-describedby="firstNameHelp" placeholder="Enter First Name">
+                        <input value="${firstName}" name="first_name" type="text" class="form-control" id="exampleFormControlInput1" aria-describedby="firstNameHelp" placeholder="Enter First Name">
                     </div>
                     <div class="form-group">
                         <label for="lastName">Last Name</label>
-                        <input value="${lastName}" name="lastName" type="text" class="form-control" id="lastName" aria-describedby="lastNameHelp" placeholder="Enter Last Name">
+                        <input value="${lastName}" name="last_name" type="text" class="form-control" id="exampleFormControlInput1" aria-describedby="lastNameHelp" placeholder="Enter Last Name">
                     </div>
                     <div class="form-group">
                         <label for="email">Email</label>
