adds small amount of styling to page

--- a/views/createUser.html
+++ b/views/createUser.html
@@ -14,6 +14,7 @@
     body {
         background-color: #2D2D2D;
         margin: 100px;
+        text-align: center;
     }
     
     h1 {
@@ -23,11 +24,17 @@
 
     .form-group {
         color: white;
+        text-align: left;
     }
     
     .btn {
         color: white;
         background-color: orange;
+        margin: 15px;
+    }
+
+    bolabel {
+        text-align: start;
     }
 
     img {
@@ -74,7 +81,7 @@
                     </div> -->
                 
                     </div>
-                    <button type="submit" class="btn">Log In</button>
+                    <button type="submit" class="btn">Create Account</button>
                 </form>
 
                 <div class="footer">
