--- a/views/details.html
+++ b/views/details.html
@@ -14,6 +14,28 @@
     
     <h3>${firstName}</h3>
 
+
+    <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Notes</th>
+                <th scope="col">Users Id</th>
+                <th scope="col">All Tickets Id</th>
+              </tr>
+            </thead>
+            <tbody>
+              ${ detail.map((note) => { return `
+              <tr>
+                <td>${note.id}</td>
+                <td>${note.note_content}</td>
+                <td>${note.users_id}</td>
+                <td>${note.all_tickets_id}</td>
+                ` }).join('') }
+              </tr>
+            </tbody>
+          </table>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
